======================

Unreleased
----------

- LP #389511: KARL doesn’t handle embeding YouTube or Brightcove videos.

- LP #383666: Paste from Word to blog posts emails content but drops from
  blogentry

- LP #398914: Scale and crop uploaded profile photos to fit 75 x 100.
  The original image uploads are available under the name
  "source_photo", for example, /profiles/admin/source_photo .

3.4 (2009-07-09)
----------------

- LP #394355: Don't commit changes to sqlite "pending messages" table if
  ZODB raises a conflict error.

- LP #391264: Added an administrator-level user edit view.

- LP #391259: Added an administrator-level user add view.

- LP #397030: Use quarantine for messages that fail to process during mail-in.

- Got rid kludgy '.error' file for mail-in, since the quarantine renders it
  obsolete.

3.3 (2009-07-06)
----------------

- Add fault tolerance to mail-in for message bodies with unknown non-unicode
  character encodings.

- Add a ``karl_project`` paster template (unfinished) in order to
  bootstrap a KARL customization.  The code used is an amalgam of
  Tres' ``non_osi_template`` package updated with recent changes to
  the OSI package.

- Forward compat: use the "repoze.bfg.view.static" helper rather than
  rolling our own view to serve static files in karl.views.site.

- LP #392561:  get 'content_modified' set correctly on communities when
  adding content.

- LP #391234:  Use a non-forked version of the repoze.who auth_tkt plugin
  (repoze.who 1.0.15, now in the "lemonade" index has the "max age" feature
  which made this fork necessary).

- LP #391246:  Removed concept of "vocabularies" as a persistently stored
  thing with indirection.  Placed countries data in core karl package as
  const data.

- LP #390868:  Updated OSI logo.

- LP #384841:  Add 'use_cache' kw argument to CachingCatalog to disable
  cache for particular searches.

- LP #391377: Moved settings such as 'system_email_domain' to karl.ini.
